--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BullBear Development</title>
-  <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
 
   <meta name="theme-color" content="#fafafa">
+  <style>
+    html, body {
+      background-color: black;
+      text-color: smoke;
+    }      
+  </style>
 </head>
 
 <body>
+  <h1>Bull Bear Development</h1>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
 
 </body>
 
