--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <style>
     html, body {
       background-color: black;
-      text-color: smoke;
+      color: smoke;
+      font-family: Helvetica, Verdana, Arial
     }      
   </style>
 </head>
 
 <body>
-  <h1>Bull Bear Development</h1>
-
+  <h2>Bull Bear Development</h2>
+  
 
 </body>
 
