--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta name="theme-color" content="#fafafa">
   <style>
-    html, body {
+    html, body, * {
       background-color: black;
       color: smoke;
       font-family: Helvetica, Verdana, Arial
