--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
   <meta name="theme-color" content="#fafafa">
   <style>
     html, body, * {
-      background-color: black;
-      color: smoke;
       font-family: Helvetica, Verdana, Arial
     }      
+
+    p {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);      
+    }
   </style>
 </head>
 
 <body>
-  <h2>Bull Bear Development</h2>
-  
+  <p><h2>Bull Bear Development</h2></p>
+  <p><h1>Coming Soon</h1></p>
+  <p>Connect to your toys through the phases of the moon</p>  
 
 </body>
 
