--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
       font-family: Helvetica, Verdana, Arial
     }      
 
-    p {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);      
+    h1, h2, p {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);      
     }
   </style>
 </head>
 
 <body>
-  <p><h2>Bull Bear Development</h2></p>
-  <p><h1>Coming Soon</h1></p>
-  <p>Connect to your toys through the phases of the moon</p>  
+  <p><h2 style="color: purple">Bull Bear Development</h2></p>
+  <p><h1 style="color: magenta">Coming Soon</h1></p>
+  <p style="color: purple">Connect to your toys through the phases of the moon</p>  
 
 </body>
 
