--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       font-family: Helvetica, Verdana, Arial
     }      
 
-    h1, h2, p {
+    p {
       position: fixed;
       top: 50%;
       left: 50%;
@@ -22,10 +22,13 @@
 </head>
 
 <body>
-  <p><h2 style="color: purple">Bull Bear Development</h2></p>
-  <p><h1 style="color: magenta">Coming Soon</h1></p>
-  <p style="color: purple">Connect to your toys through the phases of the moon</p>  
-
+  <p>
+    <span style="color: purple; font-size: 30px">Bull Bear Development</span>
+    <hr>
+    <span style="color: magenta; font-size: 40px">Coming Soon</span>
+    <hr>
+    <span style="color: purple; font-size: 24px">Connect to your toys through the phases of the moon</span>  
+    <hr>
 </body>
 
 </html>
