--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       font-family: Helvetica, Verdana, Arial
     }      
 
-    p {
+    .centered {
       position: fixed;
       top: 50%;
       left: 50%;
@@ -22,13 +22,14 @@
 </head>
 
 <body>
-  <p>
+  <div class="centered" style="width: 50%">
     <span style="color: purple; font-size: 30px">Bull Bear Development</span>
     <hr>
     <span style="color: magenta; font-size: 40px">Coming Soon</span>
     <hr>
     <span style="color: purple; font-size: 24px">Connect to your toys through the phases of the moon</span>  
     <hr>
+  </div>
 </body>
 
 </html>
